--- a/fortran/ConLaw/Makefile
+++ b/fortran/ConLaw/Makefile
@@ -1,6 +1,7 @@
 # Makefile for compiling the code in ConLaw folder
 
 OBJECTS = functions.o flux.o godunov.o
+OBJECTS2 = functions.o flux.o lax.o
 MODULES = functions.mod flux.mod
 
 FFLAGS = -g
@@ -10,8 +11,14 @@ FFLAGS = -g
 godunov : godunov.exe
 	./godunov.exe
 
+make lax : lax.exe
+	./lax.exe
+
 godunov.exe : $(MODULES) $(OBJECTS)
 	gfortran $(FFLAGS) $(OBJECTS) -o godunov.exe
+
+lax.exe : $(MODULES) $(OBJECTS2)
+	gfortran $(FFLAGS) $(OBJECTS2) -o lax.exe
 
 %.mod : %.f90
 	gfortran $(FFLAGS) -c $<
