Changes in makefile

--- a/fortran/conlaw/Makefile
+++ b/fortran/conlaw/Makefile
@@ -1,6 +1,7 @@
 # Makefile for compiling the fortran code
 
 OBJECTS = fun.o god.o
+OBJECTS2 = fun.o lax.o
 MODULES = fun.mod
 
 FFLAGS = -g
@@ -10,8 +11,14 @@ FFLAGS = -g
 godunov : god.exe
 	./god.exe
 
+lax : lax.exe
+	./lax.exe
+
 god.exe : $(OBJECTS) $(MODULES)
 	gfortran $(FFLAGS) $(OBJECTS) -o god.exe
+
+lax.exe : $(OBJECTS2) $(MODULES)
+	gfortran $(FFLAGS) $(OBJECTS2) -o lax.exe
 
 %.o : %.f90
 	gfortran $(FFLAGS) -c $<
